# wax

./: .gitattributes  .gitignore  Cargo.toml  Design.md  Readme.md  Todo.md
.github/: syntax.mdx  wax-compiler.drawio
.wax/lib/: level_1.html
.wax/routes/: index.html
assets/: .gitignore  comp.html  index.html  wax.toml
assets/lib/: dyn_level.html  level_1.html  level_2.html  level_3.html
assets/routes/: index.html
assets/src/lib/: comp.html  doc.md  dyn-import.html  dyn-test.html
assets/src/lib/docs/: doc.md  page.md
assets/src/pages/: docs.html  home.html  index.html
benches/: compiler.rs  my_benchmark.rs
compiler/: readme.md
compiler/wax_lexer/: Cargo.toml
compiler/wax_lexer/src/: char.rs  iter.rs  lib.rs  script.rs  span.rs  token.rs
compiler/wax_lexer/src/scope/: mod.rs
compiler/wax_logger/: Cargo.toml
compiler/wax_logger/src/: error.rs  lib.rs  lines.rs
compiler/wax_parser/: Cargo.toml
compiler/wax_parser/src/: error.rs  lib.rs  lines.rs  node.rs  tree.rs
compiler/wax_parser/src/scope/: tmpl.rs
compiler/wax_pest/: Cargo.toml
compiler/wax_pest/src/: grammar.pest  lib.rs  main.rs  wax.pest
compiler/waxc_codegen/: Cargo.toml
compiler/waxc_codegen/src/: comb.rs  lib.rs  page.rs  visit.rs
compiler/waxc_errors/: Cargo.toml
compiler/waxc_errors/src/: error.rs  lib.rs  lines.rs  macros.rs
compiler/waxc_lexer/: Cargo.toml
compiler/waxc_lexer/src/: _char.rs  _iter.rs  char.rs  iter.rs  lexer.rs  lib.rs  span.rs  token.rs
compiler/waxc_parser/: Cargo.toml
compiler/waxc_parser/src/: lib.rs  node.rs  parser.rs  span.rs  tree.rs
compiler/waxc_parser/src/scope/: tmpl.rs
compiler/waxc_parser/src/scope/tmpl/: attrib.rs
compiler/waxc_parser/src/scopes/: tmpl.rs
compiler/waxc_parser/src/scopes/tmpl/: attrib.rs  string.rs  void.rs
example/: wax.toml
example/goal/lib/: comp.js
example/goal/pages/: hive.js
example/src/: index.html
example/src/lib/: card.wx  comp.wx  title.wx
example/src/pages/: base.wx  card.wx  hive.dyn.wx  hive.nojs.wx  hive.rs.wx  hive.use.wx  hive.wx  hive.wxc  index.wx
example/src/pages/test/: index.wx
src/: args.rs  build.rs  conf.rs  create.rs  include.rs  main.rs  term.rs  utils.rs
src/compiler/: comb.rs  mod.rs
src/compiler/lexer/: char.rs  html.rs  mod.rs  script.rs  token.rs
src/compiler/parser/: mod.rs  node.rs  tree.rs
src/creator/: abbee.rs
src/error/: mod.rs
src/fetcher/: import.rs  mod.rs
src/fetcher/tests/: import.rs
src/flow/: include.rs  mod.rs  params.rs
src/flow/include/: html.rs  md.rs
src/logging/: mod.rs
src/parser/: include.rs  mod.rs  params.rs
src/parser/include/: dir.rs  html.rs  md.rs
src/server/: mod.rs
src/tests/: import.rs  mod.rs
src/utils/: conf.rs  files.rs  line.rs  log.rs  mod.rs  term.rs  utils.rs
