[package]
name = "wax-cli"
description = "An extension of HTML written in Rust"
authors = ["Max C. <mxcop.dev@gmail.com>"]
version = "0.1.6"
edition = "2021"
readme = "Readme.md"
repository = "https://github.com/mxcop/wax/"
license = "MIT"
keywords = ["html", "parser", "cli"]
categories = ["command-line-utilities", "compilers", "development-tools::build-utils", "parser-implementations"]
exclude = ["/assets"]

[[bin]]
name = "wax"
path = "src/main.rs"

[dependencies]
regex = "1.6.0"

# Toml parser
toml = "0.5.9"

# Fancy colors in the terminal
colored = "2.0.0"

# Command line tool helper
clap = { version = "4.0.18", features = ["derive"] }
