[package]
name = "wax_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wax_logger = { path = "../wax_logger" }
wax_lexer = { path = "../wax_lexer" }
peekmore = "1.0.0"

colored = "2.0.0" #! Temporary for testing...