[package]
name = "waxc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waxc_errors = { path = "../waxc_errors" }
waxc_lexer = { path = "../waxc_lexer" }
peekmore = "1.0.0"

colored = "2.0.0" #! Temporary for testing...